tests/ui/project/type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:38:9
   |
38 |         None => {} //~ ERROR mismatched types
   |         ^^^^ expected enum `type_mismatch::__FooProjection`, found enum `std::option::Option`
   |
   = note: expected enum `type_mismatch::__FooProjection<'_, {integer}, {integer}, _, _>`
              found enum `std::option::Option<_>`

error[E0308]: mismatched types
  |
  = note: expected enum `type_mismatch_span_issue::__FooProjection<'_, {integer}, {integer}, _, _>`
             found enum `std::option::Option<_>`
